fix Makefiles, add README badge, adds vs2017 project

--- a/AGSController/Makefile
+++ b/AGSController/Makefile
@@ -1,16 +1,30 @@
 UNAME := $(shell uname)
 
+
+
 INCDIR = ../../Engine ../../Common
 LIBDIR =
 CC = gcc
 CXX = g++
-CFLAGS = -fPIC -fvisibility=hidden -O2 -g -Wall
 LIBS = -lm -lstdc++
 
 ifeq ($(UNAME), Darwin)
+
+LIBS    += -framework SDL2
+SDL_LIB = -F/Library/Frameworks
+SDL_INCLUDE = -F/Library/Frameworks -I/Library/Frameworks/SDL2.framework/Headers/
+
+CFLAGS = -fPIC -fvisibility=hidden -O2 -g -Wall $(SDL_INCLUDE)
+LDFLAGS = $(SDL_LIB)
 TARGET = libagsflashlight.dylib
 CFLAGS += -DMAC_VERSION
 else
+
+SDL_LIB = `sdl2-config --libs`
+SDL_INCLUDE = `sdl2-config --cflags`
+
+CFLAGS = -fPIC -fvisibility=hidden -O2 -g -Wall $(SDL_INCLUDE)
+LDFLAGS = $(SDL_LIB)
 TARGET = libagsflashlight.so
 CFLAGS += -DLINUX_VERSION
 endif
