--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,6 +24,15 @@ pool:
 steps:
 # Linux
 - bash: |
+    curl -O https://www.libsdl.org/release/SDL2-2.0.9.tar.gz
+    tar -xzf SDL2-2.0.9.tar.gz
+    pushd SDL2-2.0.9/ 
+    mkdir $HOME/SDL
+    ./configure --prefix=$HOME/SDL
+    make
+    make install    
+    export PATH=$HOME/SDL/bin:$PATH
+    popd
     cd AGSController
     make
   condition: eq( variables['Agent.OS'], 'Linux' )
@@ -38,6 +47,14 @@ steps:
 
 # macOS
 - bash: |
+    pushd ~
+    curl -O https://www.libsdl.org/release/SDL2-2.0.9.dmg
+    hdiutil attach SDL2-2.0.9.dmg
+    sudo cp -a /Volumes/SDL2/SDL2.framework /Library/Frameworks/
+    pushd /Library/Frameworks/SDL2.framework/
+    codesign -f -s - SDL2
+    popd
+    popd
     cd AGSController
     make
   condition: eq( variables['Agent.OS'], 'Darwin' )
@@ -51,6 +68,19 @@ steps:
     targetFolder: $(Build.ArtifactStagingDirectory)
 
 # Windows
+
+- bash: |
+    curl -O https://www.libsdl.org/release/SDL2-devel-2.0.9-VC.zip
+  condition: eq( variables['Agent.OS'], 'Windows_NT' )
+  displayName: 'downloadSDL'
+
+- powershell: |
+    mkdir C:\Dev
+    7z x -y "SDL2-devel-2.0.9-VC.zip" -o"C:\Dev"
+    Rename-Item C:\Dev\SDL2-2.0.9 C:\Dev\SDL2
+  condition: eq( variables['Agent.OS'], 'Windows_NT' )   
+  displayName: 'extractSDL'
+
 - task: VSBuild@1
   condition: eq( variables['Agent.OS'], 'Windows_NT' )
   inputs:
@@ -75,8 +105,8 @@ steps:
     tag: $(tagname)
     assetUploadMode: 'replace' 
     action: 'edit' 
-    gitHubConnection: agsnormalmaps
-    repositoryName: ericoporto/AGSController           
+    gitHubConnection: agscontroller
+    repositoryName: ericoporto/AGS-Controller           
     assets: |
          $(Build.ArtifactStagingDirectory)/*.dll
          $(Build.ArtifactStagingDirectory)/*.so
