Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -92,7 +92,7 @@ steps:
   condition: eq( variables['Agent.OS'], 'Windows_NT' )   
   inputs:
     sourceFolder: '$(Build.SourcesDirectory)/AGSController/vs2017/Release'
-    contents: 'AGSController.dll'
+    contents: '*.dll' #AGSController
     targetFolder: $(Build.ArtifactStagingDirectory)
 
 - bash: |
